fix for overflow-x  02032023

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   color-scheme: dark;
 }
 
-body{
+html{
   overflow-x: hidden;
 }
 
